--- a/campagne-social.html
+++ b/campagne-social.html
@@ -13,7 +13,7 @@
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Consulenza e strategia di comunicazione sui social media | 33web">
     <meta property="og:description" content="Sviluppiamo strategie social media efficaci per far crescere davvero il tuo brand. Scopri cosa sappiamo fare e chiedici di più!">
-    <meta property="og:image" content="https://www.33web.it/images/bg-social-media_og.jpg">
+    <meta property="og:image" content="https://www.33web.it/images/bg-campagne-social_og.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:type" content="website">
@@ -22,10 +22,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Consulenza e strategia di comunicazione sui social media | 33web">
     <meta name="twitter:description" content="Sviluppiamo strategie social media efficaci per far crescere davvero il tuo brand. Scopri cosa sappiamo fare e chiedici di più!">
-    <meta name="twitter:image" content="https://www.33web.it/images/bg-social-media_og.jpg">
+    <meta name="twitter:image" content="https://www.33web.it/images/bg-campagne-social_og.jpg">
 
-    <link rel="preload" fetchpriority="high" as="image" href="images/bg-social-media_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
-    <link rel="preload" fetchpriority="high" as="image" href="images/bg-social-media.jpg" type="image/jpg" media="(min-width: 769px)">
+    <link rel="preload" fetchpriority="high" as="image" href="images/bg-campagne-social_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
+    <link rel="preload" fetchpriority="high" as="image" href="images/bg-campagne-social.jpg" type="image/jpg" media="(min-width: 769px)">
     <link rel="stylesheet" href="stili.css">
 
     <script>
@@ -39,7 +39,7 @@
         });
     </script>
 </head>
-<body class="servizi social-media">
+<body class="servizi campagne-social">
     <!-- Navbar rimane uguale -->
     <nav class="navbar">
         <div class="logo">
@@ -86,26 +86,27 @@
     <!-- Header Image -->
     <div class="header-image">
         <div class="header-logo">
-            <img src="images/chat_128.png" alt="Icona Social Media">
-            <p class="subtitle">Social Media</p>
+            <img src="images/idea_128.png" alt="Icona Social Media">
+            <p class="subtitle">Campagne Social</p>
         </div>
     </div>
 
     <!-- Contenuto Principale -->
     <div class="container">
-        <h1>Strategie social media efficaci</h1>
-        <p>Essere presenti sui social media è fondamentale, ma per far crescere davvero il tuo brand serve una strategia chiara e orientata agli obiettivi, che rifletta l’identità della tua azienda e segua i trend del settore.</p>
+        <h1>Campagne a pagamento sui social media</h1>
+        <p>I social media non sono solo uno spazio per pubblicare contenuti: con le giuste campagne, diventano un motore per attirare nuovi clienti, fidelizzare quelli esistenti e dare una spinta concreta al tuo business.</p>
         
         <div class="service-details">
             <div class="service-card">
-                <h2>Hai un profilo social, ma non funziona?</h2>
-                <p>Pubblicare senza una <strong>strategia</strong> è come parlare senza sapere cosa dire. Se i tuoi canali social non stanno portando <strong>risultati</strong>, è probabile che manchi una direzione precisa.</p>
-                <p>La nostra consulenza parte dall'analisi di <strong>ciò che funziona</strong> e cosa no, per poi costruire una strategia che tenga conto delle tue risorse interne, dei dati già disponibili e degli <strong>obiettivi di comunicazione</strong>. Non è solo una questione di pubblicare post, ma di <strong>creare un percorso</strong> che accompagni il tuo pubblico dalla scoperta del tuo brand fino all'acquisto.</p>
+                <h2>Hai investito in campagne social, ma non hai risultati?</h2>
+                <p>Hai provato a fare pubblicità su Facebook o Instagram, ma non hai visto i numeri <strong>crescere</strong>? Oppure il costo per clic è troppo alto e non capisci se <strong>vale davvero la pena</strong> continuare? Non preoccuparti, è un problema più comune di quanto pensi.</p>
+                <p>La verità è che una <strong>campagna efficace</strong> non nasce per caso. Serve una strategia che parta da obiettivi chiari, comprenda il tuo <strong>pubblico</strong> e utilizzi i <strong>canali più adatti</strong> al tuo business. Noi ci occupiamo di tutto questo, aiutandoti a raggiungere i tuoi clienti ideali senza sprecare budget.</p>
             </div>
             <div class="service-card">
                 <h3>Perché dovresti contattarci</h3>
-                <p>Non siamo semplici social media manager: siamo consulenti che ti aiutano a creare un <strong>ecosistema social</strong> in grado di <strong>crescere</strong> con il tuo business.</p>
-                <p>Ti guideremo nella definizione di una strategia chiara e <strong>personalizzata</strong>. Ogni progetto inizia con una roadmap dettagliata, che include la valutazione delle tue risorse interne, l’analisi dei competitor e la definizione di obiettivi concreti. Progetteremo i contenuti, i formati e il tono di voce <strong>più adatti</strong> al tuo target, sia in ambito B2B che B2C.</p>
+                <p>Pianificare una campagna social non si limita a creare <strong>annunci accattivanti</strong>: il nostro lavoro è trasformare il tuo investimento in <strong>risultati concreti</strong>, con un approccio strategico e personalizzato.</p>
+                <p>Ti guidiamo dalla definizione degli obiettivi alla gestione operativa, progettando campagne che siano in linea con le tue esigenze. Analizziamo il tuo pubblico, scegliamo i formati e i canali più adatti (Facebook, Instagram, LinkedIn) e <strong>ottimizziamo continuamente</strong> le performance per garantirti il massimo ritorno sull’investimento.</p>
+				<p>Il nostro obiettivo è chiaro: farti <strong>ottenere clienti</strong>, non clic. Con scelte ponderate, un monitoraggio costante e report dettagliati, ti offriamo la certezza che ogni euro speso lavori per il successo del tuo brand.</p>
                 <a href="mailto:preventivi@33web.it" class="cta-button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0l-8 5l-8-5zm0 12H4V8l8 5l8-5z"/></svg>Chiedi una consulenza</a>
             </div>
         </div>
@@ -113,16 +114,16 @@
 
     <!-- Services section -->
     <div class="services">
-        <h2>Per la tua strategia sui Social Media</h2>
+        <h2>Amplia la tua strategia Social</h2>
         <div class="services-boxes">
             <div class="service-box">
-                <div class="service-header">
-                    <img src="images/idea_64.png" alt="Social Campaign Icon" class="service-icon">
-                    <h3>Campagne Social</h3>
-                </div>
-                <p>Progettazione e gestione di campagne sui Social Media</p>
-                <a href="campagne-social.html">></a>
-            </div>
+				<div class="service-header">
+					<img src="images/chat_64.png" alt="Social Media Icon" class="service-icon">
+					<h3>Social Media</h3>
+				</div>
+				<p>Piani editoriali e consulenza gestione piattaforme social.</p>
+				<a href="social-media.html">></a>
+			</div>
             
             <div class="service-box">
                 <div class="service-header">
