--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -63,7 +63,7 @@
 				<li>
 					<a href="social-media.html">Social Media</a>
 					<ul class="submenu">
-						<li><a href="#campagne-social">Campagne social</a></li>
+						<li><a href="campagne-social.html">Campagne social</a></li>
 					</ul>
 				</li>
 				<li>
@@ -149,7 +149,7 @@
 					<h3>Roxana Todea</h3>
 					<p>Inizia la sua carriera nel 2007 come esperta di comunicazione e PR in agenzia. Dal 2011 lavora come freelance, collaborando con agenzie, aziende, istituzioni e organizzazioni internazionali.</p>
 					<p>Da anni supporta la crescita di startup e nuove realtà no profit a livello globale. È specialista in strategie digitali e <a href="social-media.html">social media</a>, con un’esperienza intersettoriale che unisce visione strategica orientata ai risultati e capacità analitica. </p>
-					<p>Media Buyer esperta su piattaforme Meta e LinkedIn, ha maturato una solida esperienza nella gestione di progetti B2B e B2C e nello sviluppo di <a href="#">campagne pubblicitarie</a> efficaci.</p>
+					<p>Media Buyer esperta su piattaforme Meta e LinkedIn, ha maturato una solida esperienza nella gestione di progetti B2B e B2C e nello sviluppo di <a href="campagne-social.html">campagne pubblicitarie</a> efficaci.</p>
 					<p>Quando non sta tracciando conversioni o ottimizzando campagne adv, la trovi con una fotocamera o immersa in un progetto video: per lei, la creatività è una parte essenziale del lavoro (anche se vorrebbe avere più tempo da dedicarci).</p>
 					<p>Tiene anche corsi di formazione e training su digital marketing e social media per aziende e ONG, sia online che in presenza.</p>
 				</div>
