--- a/seo.html
+++ b/seo.html
@@ -61,9 +61,9 @@
 					<a href="ecommerce.html">Ecommerce</a>
 				</li>
 				<li>
-					<a href="#social-media">Social Media</a>
+					<a href="social-media.html">Social Media</a>
 					<ul class="submenu">
-						<li><a href="social-media.html">Campagne social</a></li>
+						<li><a href="campagne-social.html">Campagne social</a></li>
 					</ul>
 				</li>
 				<li>
