--- a/digital-analytics.html
+++ b/digital-analytics.html
@@ -63,7 +63,7 @@
 				<li>
 					<a href="social-media.html">Social Media</a>
 					<ul class="submenu">
-						<li><a href="#campagne-social">Campagne social</a></li>
+						<li><a href="campagne-social.html">Campagne social</a></li>
 					</ul>
 				</li>
 				<li>
@@ -155,7 +155,7 @@
                     <h3>Campagne Social</h3>
                 </div>
                 <p>Progettazione e gestione di campagne sui Social Media</p>
-                <a href="#">></a>
+                <a href="campagne-social.html">></a>
         </div>
 	</div>
 	
