--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<li>
 					<a href="social-media.html">Social Media</a>
 					<ul class="submenu">
-						<li><a href="#campagne-social">Campagne social</a></li>
+						<li><a href="campagne-social.html">Campagne social</a></li>
 					</ul>
 				</li>
 				<li>
