--- a/campagne-social.html
+++ b/campagne-social.html
@@ -8,11 +8,11 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
-    <title>Consulenza e strategia di comunicazione sui social media | 33web</title>
-    <meta name="description" content="Sviluppiamo strategie social media efficaci per far crescere davvero il tuo brand. Scopri cosa sappiamo fare e chiedici di più!">
+    <title>Consulenza, progettazione e gestione di campagne sui social media | 33web</title>
+    <meta name="description" content="Progettiamo e gestiamo campagne sui social media per dare una spinta concreta al tuo business. Scopri cosa sappiamo fare e chiedici di più!">
     <!-- Open Graph meta tags -->
-    <meta property="og:title" content="Consulenza e strategia di comunicazione sui social media | 33web">
-    <meta property="og:description" content="Sviluppiamo strategie social media efficaci per far crescere davvero il tuo brand. Scopri cosa sappiamo fare e chiedici di più!">
+    <meta property="og:title" content="Consulenza, progettazione e gestione di campagne sui social media | 33web">
+    <meta property="og:description" content="Progettiamo e gestiamo campagne sui social media per dare una spinta concreta al tuo business. Scopri cosa sappiamo fare e chiedici di più!">
     <meta property="og:image" content="https://www.33web.it/images/bg-campagne-social_og.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -20,8 +20,8 @@
     <meta property="og:site_name" content="33web">
     <meta property="og:locale" content="it_IT">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Consulenza e strategia di comunicazione sui social media | 33web">
-    <meta name="twitter:description" content="Sviluppiamo strategie social media efficaci per far crescere davvero il tuo brand. Scopri cosa sappiamo fare e chiedici di più!">
+    <meta name="twitter:title" content="Consulenza, progettazione e gestione di campagne sui social media | 33web">
+    <meta name="twitter:description" content="Progettiamo e gestiamo campagne sui social media per dare una spinta concreta al tuo business. Scopri cosa sappiamo fare e chiedici di più!">
     <meta name="twitter:image" content="https://www.33web.it/images/bg-campagne-social_og.jpg">
 
     <link rel="preload" fetchpriority="high" as="image" href="images/bg-campagne-social_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
