--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -207,6 +207,7 @@
         <p>Via Mosna di Vigolo 14/A, 38123 Trento</p>
         <p>CF: PLOLSE82E50L378C</p>
 		<p>PI: IT02773780222</p>
+		<p><a href="privacy.html" rel="nofollow">Privacy</a></p>
     </footer>
 </body>
 </html>
