--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,7 @@
     <title>Privacy policy | 33web</title>
 	<meta name="description" content="Informativa sulla privacy ai sensi del Regolamento UE 2016/679. Tutte le informazioni e i contatti necessari per esercitare i diritti concessi.">
 	<!-- Open Graph meta tags -->
-	<meta property="og:title" content="33web | Studio di consulenza marketing online">
+	<meta property="og:title" content="Privacy policy | 33web">
 	<meta property="og:description" content="Informativa sulla privacy ai sensi del Regolamento UE 2016/679. Tutte le informazioni e i contatti necessari per esercitare i diritti concessi.">
 	<meta property="og:image" content="https://www.33web.it/images/og-image-1200x630.jpg">
 	<meta property="og:image:width" content="1200">
@@ -21,7 +21,7 @@
 	<meta property="og:site_name" content="33web">
 	<meta property="og:locale" content="it_IT">
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="33web | Studio di consulenza marketing online">
+	<meta name="twitter:title" content="Privacy policy | 33web">
 	<meta name="twitter:description" content="Informativa sulla privacy ai sensi del Regolamento UE 2016/679. Tutte le informazioni e i contatti necessari per esercitare i diritti concessi.">
 	<meta name="twitter:image" content="https://www.33web.it/images/og-image-1200x630.jpg">
 	
