--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -141,7 +141,7 @@
 					<img src="images/roxana-todea.jpg" alt="Roxana Todea" class="team-avatar">
 					<div class="contact-icons">
 						<a href="mailto:roxana@33web.it"><img src="images/email.svg" alt="Email"></a>
-						<a href="https://it.roxanatodea.com/" target="_blank"><img src="images/www.svg" alt="Personal website"></a>
+						<a href="https://www.roxanatodea.com/" target="_blank"><img src="images/www.svg" alt="Personal website"></a>
 						<a href="https://www.linkedin.com/in/roxanatodea/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
 					</div>
 				</div>
