Aggiornamento link box servizi

--- a/campagne-ppc.html
+++ b/campagne-ppc.html
@@ -120,32 +120,32 @@
 	<div class="services">
 	<h2>Amplia la tua strategia di Search Marketing</h2>
 	<div class="services-boxes">
-		<div class="service-box">
+		<a href="search-marketing.html" class="service-box">
 			<div class="service-header">
 				<img src="images/loupe_64.png" alt="Icona Search Marketing" class="service-icon">
 				<h3>Search Marketing</h3>
 			</div>
 			<p>Strategie di posizionamento e visibilità nei motori di ricerca.</p>
-			<a href="search-marketing.html">></a>
-		</div>
-		
-		<div class="service-box">
+			<span class="service-cta">></span>
+		</a>
+	
+		<a href="seo.html" class="service-box">
 			<div class="service-header">
 				<img src="images/seo_64.png" alt="Icona SEO" class="service-icon">
 				<h3>Ottimizzazione (SEO)</h3>
 			</div>
 			<p>Analisi del pubblico e ottimizzazione della visibilità organica.</p>
-			<a href="seo.html">></a>
-		</div>
-
-		<div class="service-box">
+			<span class="service-cta">></span>
+		</a>
+	
+		<a href="digital-analytics.html" class="service-box">
 			<div class="service-header">
-				<img src="images/analytics_64.png" alt="Digital Analytics Icon" class="service-icon">
+				<img src="images/analytics_64.png" alt="Icona Digital Analytics" class="service-icon">
 				<h3>Digital Analytics</h3>
 			</div>
 			<p>Analisi dei dati per ottimizzare le tue strategie digitali.</p>
-			<a href="digital-analytics.html">></a>
-		</div>
+			<span class="service-cta">></span>
+		</a>
 	</div>
 	
 	</div>
