--- a/campagne-social.html
+++ b/campagne-social.html
@@ -116,25 +116,25 @@
     <div class="services">
         <h2>Amplia la tua strategia Social</h2>
         <div class="services-boxes">
-            <div class="service-box">
+			<a href="social-media.html" class="service-box">
 				<div class="service-header">
-					<img src="images/chat_64.png" alt="Social Media Icon" class="service-icon">
+					<img src="images/chat_64.png" alt="Icona Social Media" class="service-icon">
 					<h3>Social Media</h3>
 				</div>
 				<p>Piani editoriali e consulenza gestione piattaforme social.</p>
-				<a href="social-media.html">></a>
-			</div>
-            
-            <div class="service-box">
-                <div class="service-header">
-                    <img src="images/analytics_64.png" alt="Icona Digital Analytics" class="service-icon">
-                    <h3>Digital Analytics</h3>
-                </div>
-                <p>Misurazione e analisi delle performance digitali.</p>
-                <a href="digital-analytics.html">></a>
-            </div>
+				<span class="service-cta">></span>
+			</a>
+			
+			<a href="digital-analytics.html" class="service-box">
+				<div class="service-header">
+					<img src="images/analytics_64.png" alt="Icona Digital Analytics" class="service-icon">
+					<h3>Digital Analytics</h3>
+				</div>
+				<p>Misurazione e analisi delle performance digitali.</p>
+				<span class="service-cta">></span>
+			</a>
+		</div>
 
-        </div>
     </div>
 
     <!-- Team Section -->
