--- a/digital-analytics.html
+++ b/digital-analytics.html
@@ -122,41 +122,41 @@
 	<div class="services">
 	<h2>Misura il successo delle attività di marketing</h2>
 	<div class="services-boxes">
-		<div class="service-box">
+		<a href="seo.html" class="service-box">
 			<div class="service-header">
 				<img src="images/seo_64.png" alt="Icona SEO" class="service-icon">
 				<h3>Ottimizzazione (SEO)</h3>
 			</div>
 			<p>Analisi del pubblico e ottimizzazione della visibilità organica.</p>
-			<a href="seo.html">></a>
-		</div>
+			<span class="service-cta">></span>
+		</a>
 	
-		<div class="service-box">
+		<a href="campagne-ppc.html" class="service-box">
 			<div class="service-header">
 				<img src="images/investment_64.png" alt="Icona Campagne Pay Per Clic" class="service-icon">
 				<h3>Campagne PPC</h3>
 			</div>
 			<p>Progettazione e gestione di campagne di ricerca orientate ai risultati.</p>
-			<a href="campagne-ppc.html">></a>
-		</div>
-
-		<div class="service-box">
+			<span class="service-cta">></span>
+		</a>
+	
+		<a href="ecommerce.html" class="service-box">
 			<div class="service-header">
-				<img src="images/promotion_64.png" alt="Ecommerce Icon" class="service-icon">
+				<img src="images/promotion_64.png" alt="Icona Ecommerce" class="service-icon">
 				<h3>Ecommerce</h3>
 			</div>
 			<p>Soluzioni per il tuo negozio online e strategie di vendita.</p>
-			<a href="ecommerce.html">></a>
-		</div>
-		
-		<div class="service-box">
-                <div class="service-header">
-                    <img src="images/idea_64.png" alt="Social Campaign Icon" class="service-icon">
-                    <h3>Campagne Social</h3>
-                </div>
-                <p>Progettazione e gestione di campagne sui Social Media</p>
-                <a href="campagne-social.html">></a>
-        </div>
+			<span class="service-cta">></span>
+		</a>
+	
+		<a href="campagne-social.html" class="service-box">
+			<div class="service-header">
+				<img src="images/idea_64.png" alt="Icona Campagne Social" class="service-icon">
+				<h3>Campagne Social</h3>
+			</div>
+			<p>Progettazione e gestione di campagne sui Social Media</p>
+			<span class="service-cta">></span>
+		</a>
 	</div>
 	
 	</div>
