--- a/search-marketing.html
+++ b/search-marketing.html
@@ -120,33 +120,34 @@
 	<div class="services">
 	<h2>Per la tua strategia di Search Marketing</h2>
 	<div class="services-boxes">
-		<div class="service-box">
+		<a href="seo.html" class="service-box">
 			<div class="service-header">
 				<img src="images/seo_64.png" alt="Icona SEO" class="service-icon">
 				<h3>Ottimizzazione (SEO)</h3>
 			</div>
 			<p>Analisi del pubblico e ottimizzazione della visibilità organica.</p>
-			<a href="seo.html">></a>
-		</div>
+			<span class="service-cta">></span>
+		</a>
 	
-		<div class="service-box">
+		<a href="campagne-ppc.html" class="service-box">
 			<div class="service-header">
 				<img src="images/investment_64.png" alt="Icona Campagne Pay Per Clic" class="service-icon">
 				<h3>Campagne PPC</h3>
 			</div>
 			<p>Progettazione e gestione di campagne di ricerca orientate ai risultati.</p>
-			<a href="campagne-ppc.html">></a>
-		</div>
-
-		<div class="service-box">
+			<span class="service-cta">></span>
+		</a>
+	
+		<a href="digital-analytics.html" class="service-box">
 			<div class="service-header">
-				<img src="images/analytics_64.png" alt="Digital Analytics Icon" class="service-icon">
+				<img src="images/analytics_64.png" alt="Icona Digital Analytics" class="service-icon">
 				<h3>Digital Analytics</h3>
 			</div>
 			<p>Analisi dei dati per ottimizzare le tue strategie digitali.</p>
-			<a href="digital-analytics.html">></a>
-		</div>
+			<span class="service-cta">></span>
+		</a>
 	</div>
+
 	
 	</div>
 	
