--- a/seo.html
+++ b/seo.html
@@ -118,37 +118,37 @@
 	
 	<!-- Services section -->
 	<div class="services">
-	<h2>Amplia la tua strategia di Search Marketing</h2>
-	<div class="services-boxes">
-		<div class="service-box">
-			<div class="service-header">
-				<img src="images/loupe_64.png" alt="Icona Search Marketing" class="service-icon">
-				<h3>Search Marketing</h3>
-			</div>
-			<p>Strategie di posizionamento e visibilità nei motori di ricerca.</p>
-			<a href="search-marketing.html">></a>
-		</div>
-	
-		<div class="service-box">
-			<div class="service-header">
-				<img src="images/investment_64.png" alt="Icona Campagne Pay Per Clic" class="service-icon">
-				<h3>Campagne PPC</h3>
-			</div>
-			<p>Progettazione e gestione di campagne di ricerca orientate ai risultati.</p>
-			<a href="campagne-ppc.html">></a>
-		</div>
+    <h2>Amplia la tua strategia di Search Marketing</h2>
+    <div class="services-boxes">
+        <a href="search-marketing.html" class="service-box">
+            <div class="service-header">
+                <img src="images/loupe_64.png" alt="Icona Search Marketing" class="service-icon">
+                <h3>Search Marketing</h3>
+            </div>
+            <p>Strategie di posizionamento e visibilità nei motori di ricerca.</p>
+            <span class="service-cta">></span>
+        </a>
 
-		<div class="service-box">
-			<div class="service-header">
-				<img src="images/analytics_64.png" alt="Digital Analytics Icon" class="service-icon">
-				<h3>Digital Analytics</h3>
-			</div>
-			<p>Analisi dei dati per ottimizzare le tue strategie digitali.</p>
-			<a href="digital-analytics.html">></a>
-		</div>
+        <a href="campagne-ppc.html" class="service-box">
+            <div class="service-header">
+                <img src="images/investment_64.png" alt="Icona Campagne Pay Per Clic" class="service-icon">
+                <h3>Campagne PPC</h3>
+            </div>
+            <p>Progettazione e gestione di campagne di ricerca orientate ai risultati.</p>
+            <span class="service-cta">></span>
+        </a>
+
+        <a href="digital-analytics.html" class="service-box">
+            <div class="service-header">
+                <img src="images/analytics_64.png" alt="Icona Digital Analytics" class="service-icon">
+                <h3>Digital Analytics</h3>
+            </div>
+            <p>Analisi dei dati per ottimizzare le tue strategie digitali.</p>
+            <span class="service-cta">></span>
+        </a>
+    </div>
 	</div>
-	
-	</div>
+
 	
 	<!-- Team Section -->
 	<div class="team">
