--- a/social-media.html
+++ b/social-media.html
@@ -115,25 +115,25 @@
     <div class="services">
         <h2>Per la tua strategia sui Social Media</h2>
         <div class="services-boxes">
-            <div class="service-box">
-                <div class="service-header">
-                    <img src="images/idea_64.png" alt="Social Campaign Icon" class="service-icon">
-                    <h3>Campagne Social</h3>
-                </div>
-                <p>Progettazione e gestione di campagne sui Social Media</p>
-                <a href="campagne-social.html">></a>
-            </div>
-            
-            <div class="service-box">
-                <div class="service-header">
-                    <img src="images/analytics_64.png" alt="Icona Digital Analytics" class="service-icon">
-                    <h3>Digital Analytics</h3>
-                </div>
-                <p>Misurazione e analisi delle performance digitali.</p>
-                <a href="digital-analytics.html">></a>
-            </div>
-
-        </div>
+			<a href="campagne-social.html" class="service-box">
+				<div class="service-header">
+					<img src="images/idea_64.png" alt="Icona Campagne Social" class="service-icon">
+					<h3>Campagne Social</h3>
+				</div>
+				<p>Progettazione e gestione di campagne sui Social Media.</p>
+				<span class="service-cta">></span>
+			</a>
+			
+			<a href="digital-analytics.html" class="service-box">
+				<div class="service-header">
+					<img src="images/analytics_64.png" alt="Icona Digital Analytics" class="service-icon">
+					<h3>Digital Analytics</h3>
+				</div>
+				<p>Misurazione e analisi delle performance digitali.</p>
+				<span class="service-cta">></span>
+			</a>
+		</div>
+	
     </div>
 
     <!-- Team Section -->
