--- a/ecommerce.html
+++ b/ecommerce.html
@@ -121,32 +121,32 @@
 	<div class="services">
 	<h2>Per la tua strategia di Ecommerce</h2>
 	<div class="services-boxes">
-		<div class="service-box">
+		<a href="search-marketing.html" class="service-box">
 			<div class="service-header">
-				<img src="images/loupe_64.png" alt="Search Marketing Icon" class="service-icon">
+				<img src="images/loupe_64.png" alt="Icona Search Marketing" class="service-icon">
 				<h3>Search Marketing</h3>
 			</div>
 			<p>Strategie di posizionamento e visibilità nei motori di ricerca.</p>
-			<a href="search-marketing.html">></a>
-		</div>
+			<span class="service-cta">></span>
+		</a>
 	
-		<div class="service-box">
+		<a href="social-media.html" class="service-box">
 			<div class="service-header">
-				<img src="images/chat_64.png" alt="Social Media Icon" class="service-icon">
+				<img src="images/chat_64.png" alt="Icona Social Media" class="service-icon">
 				<h3>Social Media</h3>
 			</div>
 			<p>Piani editoriali e consulenza gestione piattaforme social.</p>
-			<a href="social-media.html">></a>
-		</div>
-
-		<div class="service-box">
+			<span class="service-cta">></span>
+		</a>
+	
+		<a href="digital-analytics.html" class="service-box">
 			<div class="service-header">
-				<img src="images/analytics_64.png" alt="Digital Analytics Icon" class="service-icon">
+				<img src="images/analytics_64.png" alt="Icona Digital Analytics" class="service-icon">
 				<h3>Digital Analytics</h3>
 			</div>
 			<p>Analisi dei dati per ottimizzare le tue strategie digitali.</p>
-			<a href="digital-analytics.html">></a>
-		</div>
+			<span class="service-cta">></span>
+		</a>
 	</div>
 	
 	</div>
