--- a/index.html
+++ b/index.html
@@ -106,41 +106,42 @@
 	<div class="services">
 	<h2>Quello che sappiamo fare meglio</h2>
 	<div class="services-boxes">
-		<div class="service-box">
+		<a href="search-marketing.html" class="service-box">
 			<div class="service-header">
 				<img src="images/loupe_64.png" alt="Search Marketing Icon" class="service-icon">
 				<h3>Search Marketing</h3>
 			</div>
 			<p>Strategie di posizionamento e visibilità nei motori di ricerca.</p>
-			<a href="search-marketing.html">></a>
-		</div>
-	
-		<div class="service-box">
+			<span class="service-cta">></span>
+		</a>
+		
+		<a href="ecommerce.html" class="service-box">
 			<div class="service-header">
 				<img src="images/promotion_64.png" alt="Ecommerce Icon" class="service-icon">
 				<h3>Ecommerce</h3>
 			</div>
 			<p>Soluzioni per il tuo negozio online e strategie di vendita.</p>
-			<a href="ecommerce.html">></a>
-		</div>
-	
-		<div class="service-box">
+			<span class="service-cta">></span>
+		</a>
+		
+		<a href="social-media.html" class="service-box">
 			<div class="service-header">
 				<img src="images/chat_64.png" alt="Social Media Icon" class="service-icon">
 				<h3>Social Media</h3>
 			</div>
 			<p>Piani editoriali e consulenza gestione piattaforme social.</p>
-			<a href="social-media.html">></a>
-		</div>
-
-		<div class="service-box">
+			<span class="service-cta">></span>
+		</a>
+		
+		<a href="digital-analytics.html" class="service-box">
 			<div class="service-header">
 				<img src="images/analytics_64.png" alt="Digital Analytics Icon" class="service-icon">
 				<h3>Digital Analytics</h3>
 			</div>
 			<p>Analisi dei dati per ottimizzare le tue strategie digitali.</p>
-			<a href="digital-analytics.html">></a>
-		</div>
+			<span class="service-cta">></span>
+		</a>
+		
 	</div>
 	
 	</div>
