--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+	<!-- Matomo -->
+	<script>
+	var _paq = window._paq = window._paq || [];
+	_paq.push(['trackPageView']);
+	_paq.push(['enableLinkTracking']);
+	(function() {
+		var u="https://analytics.martinomosna.com/";
+		_paq.push(['setTrackerUrl', u+'matomo.php']);
+		_paq.push(['setSiteId', '6']);
+		var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+		g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+	})();
+	</script>
+	<!-- End Matomo Code -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="noindex">
@@ -106,9 +120,16 @@
 				<p>Per esercitare i diritti concessi dal Regolamento UE 2016/679 (Regolamento generale sulla protezione dei dati), al fine di conoscere l’eventuale trattamento di dati personali da parte dell’impresa individuale “33web di Elisa Poli”, è possibile inviare un messaggio e-mail all’indirizzo info@33web.it.</p>
 			</div>
 			<div class="service-card">
-				<h2>Cookies</h3>
+				<h2>Cookies</h2>
 				<p>Informativa estesa ai sensi del provv. n.229/2014 Garante Privacy e ss. mm. ii, in G.U. 3 giugno 2014.</p>
-				<p>Questo sito non fa uso di cookies, né utilizza servizi di terze parti che possano installare dei cookies.</p>
+				<h3>Definizione</h3>
+				<p>Questo sito fa uso di cookies: questi sono files di dimensioni ridotte che questo sito web installa per conto proprio o di terze parti per offrire un’esperienza di navigazione più completa e funzionale.</p>
+				<h3>Cookies propri</h3>
+				<p>Questo sito non fa uso di cookies per le sue funzionalità.</p>
+				<p>Il sito utilizza la piattaforma Matomo per la raccolta di dati statistici e anonimi, installata e gestita su server proprietario. Matomo utilizza dei cookie di tipo statistico per il suo funzionamento, inoltre nessun dato raccolto da Matomo su questo sito viene condiviso con terzi.</p>
+				<p>Mancando infine qualsiasi attività di profilazione, per questo sito web non sussiste obbligo di notificazione all’Autorità Garante per il trattamento dei dati personali ai sensi dell’art. 163 del D. Lgs. 196/2003 (“Codice della Privacy”).</p>
+				<h3>Cookies di terze parti</h3>
+				<p>Questo sito non utilizza servizi di terze parti che possano installare dei cookies.</p>
 			</div>
 		</div>	
     </div
