--- a/campagne-ppc.html
+++ b/campagne-ppc.html
@@ -22,6 +22,7 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
+	<link rel="canonical" href="https://33web.it/campagne-ppc.html" />
     <title>Consulenza, progettazione e gestione di campagne Google Ads | 33web</title>
 	<meta name="description" content="Ti aiutiamo ad investire budget pubblicitari su Google Ads con risultati misurabili. Scopri cosa sappiamo fare e chiedici di più!">
 	<!-- Open Graph meta tags -->
