--- a/campagne-social.html
+++ b/campagne-social.html
@@ -22,6 +22,7 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
+	<link rel="canonical" href="https://33web.it/campagne-social.html" />
     <title>Consulenza, progettazione e gestione di campagne sui social media | 33web</title>
     <meta name="description" content="Progettiamo e gestiamo campagne sui social media per dare una spinta concreta al tuo business. Scopri cosa sappiamo fare e chiedici di più!">
     <!-- Open Graph meta tags -->
