--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -22,6 +22,7 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
+	<link rel="canonical" href="https://33web.it/chi-siamo.html" />
     <title>Chi sono i professionisti dello studio | 33web</title>
 	<meta name="description" content="Siamo consulenti di marketing online specialisti di esperienza più che decennale. Scopri le nostre competenze e la nostra storia professionale!">
 	<!-- Open Graph meta tags -->
