--- a/digital-analytics.html
+++ b/digital-analytics.html
@@ -23,6 +23,7 @@
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
     <title>Consulenza digital analytics e tool web analytics | 33web</title>
+	<link rel="canonical" href="https://33web.it/digital-analytics.html" />
 	<meta name="description" content="Analizziamo i dati digitali e ti aiutiamo a trovare lo strumento giusto, nel rispetto delle normative. Scopri cosa sappiamo fare e chiedici di più!">
 	<!-- Open Graph meta tags -->
 	<meta property="og:title" content="Consulenza digital analytics e tool web analytics | 33web">
