--- a/ecommerce.html
+++ b/ecommerce.html
@@ -22,6 +22,7 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
+	<link rel="canonical" href="https://33web.it/ecommerce.html" />
     <title>Consulenza ecommerce e supporto gestione sito e ordini | 33web</title>
 	<meta name="description" content="Aprire un ecommerce è solo il primo passo per iniziare a vendere, siamo al tuo fianco per aiutarlo a crescere. Scopri cosa sappiamo fare e chiedici di più!">
 	<!-- Open Graph meta tags -->
