--- a/privacy.html
+++ b/privacy.html
@@ -23,6 +23,7 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
+	<link rel="canonical" href="https://33web.it/privacy.html" />
     <title>Privacy policy | 33web</title>
 	<meta name="description" content="Informativa sulla privacy ai sensi del Regolamento UE 2016/679. Tutte le informazioni e i contatti necessari per esercitare i diritti concessi.">
 	<!-- Open Graph meta tags -->
