--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
+	<link rel="canonical" href="https://33web.it/" />
     <title>33web | Studio di consulenza marketing online</title>
 	<meta name="description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Scopri cosa sappiamo fare e chiedici di più!">
 	<!-- Open Graph meta tags -->
