--- a/search-marketing.html
+++ b/search-marketing.html
@@ -22,6 +22,7 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
+	<link rel="canonical" href="https://33web.it/search-marketing.html" />
     <title>Consulenza marketing e visibilità sui motori di ricerca | 33web</title>
 	<meta name="description" content="I tuoi clienti cercano online i tuoi prodotti e servizi: sei pronto a farti trovare? Scopri cosa sappiamo fare e chiedici di più!">
 	<!-- Open Graph meta tags -->
