--- a/seo.html
+++ b/seo.html
@@ -22,6 +22,7 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
+	<link rel="canonical" href="https://33web.it/seo.html" />
     <title>Consulenza SEO e posizionamento sui motori di ricerca | 33web</title>
 	<meta name="description" content="Ottimizza la comunicazione sui motori di ricerca per farti trovare dal tuo pubblico. Scopri cosa sappiamo fare e chiedici di più!">
 	<!-- Open Graph meta tags -->
