--- a/social-media.html
+++ b/social-media.html
@@ -22,6 +22,7 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
+	<link rel="canonical" href="https://33web.it/social-media.html" />
     <title>Consulenza e strategia di comunicazione sui social media | 33web</title>
     <meta name="description" content="Sviluppiamo strategie social media efficaci per far crescere davvero il tuo brand. Scopri cosa sappiamo fare e chiedici di più!">
     <!-- Open Graph meta tags -->
