--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <h1>Siamo esperti di comunicazione online</h1>
         <p>33web è uno studio di consulenti di marketing digitale di esperienza più che decennale. Siamo specializzati in comunicazione e advertising sui motori di ricerca, strategie ed integrazione di sistemi ecommerce, strategie di social media e progettazione sistemi di digital analytics.</p>
 		<p>Scopri cosa sappiamo fare e chiedici di più!</p>
-        <a href="mailto:info@33web.it" class="cta-button">Contattaci</a>
+        <a href="mailto:info@33web.it" class="cta-button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0l-8 5l-8-5zm0 12H4V8l8 5l8-5z"/></svg>Contattaci</a>
     </div>
 
     <!-- Services section -->
